--- a/laravel-project/resources/scss/app.scss
+++ b/laravel-project/resources/scss/app.scss
@@ -29,7 +29,6 @@ body {
     animation-duration: 2s;
     animation-fill-mode: forwards;
     opacity: 0;
-
     @keyframes fadeInAnime {
         from {
             opacity: 0;
@@ -50,37 +49,38 @@ body {
         font-size: 20px;
     }
 
-    .btn-primary {
-        background: #6851F4;
-        outline: none;
+    .button013 a {
+        background: #eee;
+        position: relative;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto;
+        max-width: 240px;
+        padding: 10px 25px;
+        color: #313131;
+        transition: 0.3s ease-in-out;
+        font-weight: 500;
+        z-index:0;
+        border-left: solid 5px #135fab;
     }
-
-    .btn-primary:hover,
-    .btn-primary:focus,
-    .btn-primary:active,
-    .btn-primary:active:focus,
-    .btn-primary:active:hover,
-    .btn-primary:active.focus,
-    .btn-primary.active,
-    .btn-primary.active:focus,
-    .btn-primary.active:hover,
-    .btn-primary.active.focus,
-    .open>.dropdown-toggle.btn-primary,
-    .open>.dropdown-toggle.btn-primary:hover,
-    .open>.dropdown-toggle.btn-primary:focus,
-    .open>.dropdown-toggle.btn-primary.focus,
-    .btn-primary.disabled:hover,
-    .btn-primary[disabled]:hover,
-    fieldset[disabled] .btn-primary:hover,
-    .btn-primary.disabled:focus,
-    .btn-primary[disabled]:focus,
-    fieldset[disabled] .btn-primary:focus,
-    .btn-primary.disabled.focus,
-    .btn-primary[disabled].focus,
-    fieldset[disabled] .btn-primary.focus {
-        background: #6851F4;
-        color: white;
-        outline: none;
+    .button013 a:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 0;
+        display: block;
+        background: #135fab;
+        transition: .3s;
+        left:0;
+    }
+    .button013 a:hover {
+        color: #FFF;
+    }
+    .button013 a:hover:before {
+        width: 100%;
+        z-index: -1;
     }
 }
 
@@ -212,7 +212,6 @@ textarea {
 .overview {
     padding: 70px;
     .card_content {
-        align-items: center;
         margin-bottom: 20px;
     }
 
@@ -232,6 +231,9 @@ textarea {
         text-align: center;
         border-bottom: 5px solid #dddddd;
         margin-bottom: 40px;
+        margin-left: 200px;
+        margin-right: 200px;  
+
     }
     h1:after {
         content: '';
@@ -256,10 +258,12 @@ textarea {
         background-color: #008cff;
         outline: none;
         margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;  
+        display: block;
     }
 
     .remove {
-        // margin-bottom: 50px;
         height: 30px;
         width: 30px;
         margin: 0 5px 20px auto;
@@ -280,7 +284,16 @@ textarea {
         border-left: solid 6px #5bb7ae;
         box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.33);
         margin-left: auto;
-        margin-right: auto;  
+        margin-right: auto; 
+        .card-body {
+            display: flex;
+            #view_title_date {
+                width: 30%;
+            }
+            #view_title_time {
+                width: 30%;
+            }
+        } 
     }
     h1 {
         display: block;
@@ -289,6 +302,8 @@ textarea {
         text-align: center;
         border-bottom: 5px solid #dddddd;
         margin-bottom: 40px;
+        margin-left: 200px;
+        margin-right: 200px;  
     }
     h1:after {
         content: '';
@@ -313,10 +328,12 @@ textarea {
         background-color: #008cff;
         outline: none;
         margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;  
+        display: block;
     }
 
     .remove {
-        // margin-bottom: 50px;
         height: 30px;
         width: 30px;
         margin: 0 5px 20px auto;
